# cheiron-clinicaltrials-agent

./: .env.example  .gitignore  ARCHITECTURE.md  EXAMPLE_RUNS.md  README.md  index.html  pyproject.toml
app/: cache.py  config.py  doctor.py  logging_setup.py  main.py
app/api/: schemas.py
app/ctgov/: aggregate.py  citations.py  client.py  compare.py  countries.py  dates.py  enums.py  fields.py  histogram.py  identifiers.py  network.py  params.py  phases.py  timeseries.py  tools.py
app/graph/: build.py  clarify.py  guards.py  nodes.py  state.py
app/llm/: adapter.py  planner.py  reviewers.py
app/plan/: checker.py  models.py  recipes.py
app/viz/: review.py  spec.py  vega.py
demo/: viewer.html
examples/: run_01_single_value_yesno.json  run_02_distribution_phase.anthropic.json  run_02_distribution_phase.json  run_03_timeseries_year.json  run_04_histogram_duration.json  run_05_compare_grouped_bar.json  run_06_geographic_ranked_bar.json  run_07_network_drug_drug.json  run_08_too_large_refuse.json  run_09_exact_at_scale_status.json  run_10_network_degenerate_fallback.json  run_11_clarification.json  run_12_cc1_field_vs_query_conflict.json  run_13_boss_stacked_filters.json  run_14_boss_injection_neutralized.json  run_15_boss_compare_filtered_arms.json
scripts/: run_examples.py  run_gate.py  run_ladder.py  run_phase4_gate.py  run_phase4_hard_battery.py  run_phase5_battery.py  verify_examples.py
tests/: conftest.py  test_adapter_real.py  test_aggregate_counts.py  test_aggregate_live.py  test_cache.py  test_cache_wiring.py  test_citations_bucket.py  test_citations_composite.py  test_clarification.py  test_compare.py  test_countries.py  test_ctgov_client.py  test_ctgov_plan.py  test_entity_cap.py  test_essie_injection.py  test_examples_offline.py  test_fields_phase2.py  test_gate_live.py  test_graph.py  test_guards.py  test_hardening_api.py  test_hardening_ctgov.py  test_hardening_graph.py  test_hardening_phase1.py  test_hardening_schemas.py  test_histogram.py  test_identifiers.py  test_input_edges.py  test_invariant.py  test_llm.py  test_logging_integration.py  test_logging_redaction.py  test_main.py  test_network.py  test_output_edges.py  test_params_filters.py  test_phase2_gate_live.py  test_phase2_traps.py  test_phase3_integration.py  test_phase4_hardening.py  (+8 more)
tests/fixtures/: README.md  golden_answer.json  golden_distribution.json  golden_error.json  golden_network.json  golden_timeseries.json  golden_too_large.json
