[project]
name = "cheiron-ct-agent"
version = "0.1.0"
description = "ClinicalTrials.gov query-to-visualization agent — a deterministic visualization engine orchestrated by a ReAct planner routing to validated recipes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Soren Obounou Nguia" }]

# Pinned to the versions verified live on PyPI 2026-07-15 (BUILD_PLAN L6/L8: never default
# a version from memory). Lower bounds keep a reviewer's fresh install working; upper bounds
# fence off the next major so a surprise breaking release can't silently break the submission.
dependencies = [
    "fastapi>=0.139,<1",
    "uvicorn[standard]>=0.51,<1",
    "pydantic>=2.13,<3",
    "httpx>=0.28,<1",
    "langgraph>=1.2,<2",
    "langchain-core>=1.4,<2",
    "sse-starlette>=3.4,<4",
    # Two provider SDKs behind ONE provider-agnostic adapter (app/llm/adapter.py) — the point of
    # the capability matrix is proven by normalizing two genuinely different wire shapes, not
    # claimed. Versions verified live 2026-07-16 (L6/L8): anthropic 0.116 / openai 2.45 latest on
    # PyPI. `openai` also drives OpenRouter / a local endpoint via a base_url override.
    "anthropic>=0.116,<1",
    "openai>=2.4,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "respx>=0.23,<1",
    "ruff>=0.9",
]

[project.scripts]
ct-doctor = "app.doctor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
